Describe what you changed

--- a/episodes.html
+++ b/episodes.html
@@ -30,21 +30,21 @@
       <article class="card episode" id="ep-01" data-title="The comeback mindset" data-guest="Guest Name" data-topics="injury recovery psychology training">
         <div class="card-body">
           <p class="eyebrow">Episode 01 · Guest Name</p>
-          <h2 class="card-title">The comeback mindset</h2>
-          <p class="muted">Returning from injury, rebuilding confidence, and training smarter.</p>
+          <h2 class="card-title">The comeback mindset/ Title</h2>
+          <p class="muted">Description.</p>
 
           <div class="pill-row">
-            <span class="pill">Recovery</span>
-            <span class="pill">Mindset</span>
-            <span class="pill">Training</span>
+            <span class="pill">Tag</span>
+            <span class="pill">Tag</span>
+            <span class="pill">Tag</span>
           </div>
 
           <details class="details">
             <summary>Show notes</summary>
             <ul>
-              <li>How to set a realistic comeback timeline</li>
-              <li>Confidence rebuilding drills</li>
-              <li>Training load and recovery signals</li>
+              <li>Notees</li>
+              <li>Notes</li>
+              <li>Notes</li>
             </ul>
           </details>
 
@@ -59,20 +59,20 @@
       <article class="card episode" id="ep-02" data-title="Fueling for performance" data-guest="Guest Name" data-topics="nutrition sleep hydration">
         <div class="card-body">
           <p class="eyebrow">Episode 02 · Guest Name</p>
-          <h2 class="card-title">Fueling for performance</h2>
-          <p class="muted">Nutrition basics, game-day routines, and hydration that actually works.</p>
+          <h2 class="card-title">Fueling for performance: title</h2>
+          <p class="muted">Description.</p>
 
           <div class="pill-row">
-            <span class="pill">Nutrition</span>
-            <span class="pill">Recovery</span>
+            <span class="pill">tag</span>
+            <span class="pill">Tag</span>
           </div>
 
           <details class="details">
             <summary>Show notes</summary>
             <ul>
-              <li>Pre-game meal framework</li>
-              <li>Simple hydration rules</li>
-              <li>Supplements: what matters vs. what doesn’t</li>
+              <li>notes</li>
+              <li>Notes</li>
+              <li>Notes</li>
             </ul>
           </details>
 
