--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <a class="brand" href="index.html">Athlete Voices</a>
+      <a class="brand" href="index.html">Title: Athlete Voices</a>
       <nav class="nav">
         <a href="index.html" aria-current="page">Home</a>
         <a href="episodes.html">Episodes</a>
@@ -22,14 +22,13 @@
   <main>
     <section class="hero">
       <div class="container">
-        <h1>A podcast about athletes — stories, strategy, and mindset.</h1>
+        <h1>Description: A podcast about athletes — stories, strategy, and mindset.</h1>
         <p class="lead">
-          Weekly conversations with athletes and coaches about performance, recovery, leadership,
-          and what happens off the field.
+          Desciption of the podcast.
         </p>
         <div class="cta-row">
           <a class="button" href="episodes.html">Browse Episodes</a>
-          <a class="button button-ghost" href="#listen">Where to Listen</a>
+          <a class="button button-ghost" href="#listen">Where to Listen : actual links wil be added when you hbave those</a>
         </div>
       </div>
     </section>
@@ -39,9 +38,9 @@
       <div class="card">
         <div class="card-body">
           <p class="eyebrow">Episode 01</p>
-          <h3 class="card-title">The comeback mindset</h3>
+          <h3 class="card-title">Title: The comeback mindset</h3>
           <p class="muted">
-            Returning from injury, rebuilding confidence, and training smarter.
+            Description: Returning from injury, rebuilding confidence, and training smarter.
           </p>
           <div class="card-actions">
             <a class="button button-small" href="episodes.html#ep-01">Listen</a>
