--- a/resources.html
+++ b/resources.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Resources • Athlete Voices Podcast</title>
+  <title>Resources • Athlete Voices Podcast/ Actual title</title>
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
@@ -20,38 +20,38 @@
 
   <main class="container section">
     <h1>Resources</h1>
-    <p class="muted">Curated tools, books, and articles referenced on the show.</p>
+    <p class="muted">description: Curated tools, books, and articles referenced on the show.</p>
 
     <div class="grid">
       <section class="card">
         <div class="card-body">
-          <h2 class="card-title">Training</h2>
+          <h2 class="card-title">Title </h2>
           <ul class="list">
-            <li><a href="#" rel="noopener">Strength program template (link)</a></li>
-            <li><a href="#" rel="noopener">Mobility routine (link)</a></li>
-            <li><a href="#" rel="noopener">Warm-up checklist (link)</a></li>
+            <li><a href="#" rel="noopener"> (link)</a></li>
+            <li><a href="#" rel="noopener"> (link)</a></li>
+            <li><a href="#" rel="noopener"> (link)</a></li>
           </ul>
         </div>
       </section>
 
       <section class="card">
         <div class="card-body">
-          <h2 class="card-title">Mindset</h2>
+          <h2 class="card-title">Title</h2>
           <ul class="list">
-            <li><a href="#" rel="noopener">Performance journaling prompts (link)</a></li>
-            <li><a href="#" rel="noopener">Visualization guide (link)</a></li>
-            <li><a href="#" rel="noopener">Goal-setting framework (link)</a></li>
+            <li><a href="#" rel="noopener">(link)</a></li>
+            <li><a href="#" rel="noopener"> (link)</a></li>
+            <li><a href="#" rel="noopener">(link)</a></li>
           </ul>
         </div>
       </section>
 
       <section class="card">
         <div class="card-body">
-          <h2 class="card-title">Recovery</h2>
+          <h2 class="card-title">Title</h2>
           <ul class="list">
-            <li><a href="#" rel="noopener">Sleep basics for athletes (link)</a></li>
-            <li><a href="#" rel="noopener">Load management explainer (link)</a></li>
-            <li><a href="#" rel="noopener">Injury return checklist (link)</a></li>
+            <li><a href="#" rel="noopener"> (link)</a></li>
+            <li><a href="#" rel="noopener"> (link)</a></li>
+            <li><a href="#" rel="noopener"> (link)</a></li>
           </ul>
         </div>
       </section>
@@ -62,7 +62,7 @@
           <p class="muted">Want to suggest a guest or topic?</p>
           <ul class="list">
             <li>Email: <a href="mailto:hello@example.com">hello@example.com</a></li>
-            <li>Instagram: <a href="#" rel="noopener">@athletevoices</a></li>
+            <li>Instagram: <a href="#" rel="noopener">@Instagram</a></li>
           </ul>
         </div>
       </section>
